# crazy-carding

./: .gitignore  Cargo.toml
src/: hearthstone.rs  main.rs  prelude.rs  skryfall.rs  text.rs  ygoprodeck.rs
src/text/: render.rs
