[package]
name = "crazy-carding"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
tap = "1"
regex = "1"
image = "0.25"
viuer = "0.9.1"
serde_json = "1.0.132"
log = "0.4.22"
simple_logger = "5.0.0"
