[package]
name = "crazy-carding"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
tap = "1"
regex = "1"
image = "0.25"
viuer = "0.9"
serde_json = "1"
log = "0.4"
simple_logger = { version = "5", features = ["colors"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
imageproc = "0.25"
ab_glyph = "0.2"
itertools = "0.14.0"
